--- a/aa-stylesheet.css
+++ b/aa-stylesheet.css
@@ -38,18 +38,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-/*@font-face {
-  font-family: 'Font Name';
-  src: url('') format('embedded-opentype'),
-       url('') format('woff2'),
-       url('') format('woff'),
-       url('') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}*/
-
 @font-face {
-	font-family: 'DS Behr';
+	font-family: 'Gothish';
 	src: url('https://rpgryphus.github.io/aftermath-archives/DSBehrensschrift.eot') format('embedded-opentype'),
 		 url('https://rpgryphus.github.io/aftermath-archives/DSBehrensschrift.woff2') format('woff2'),
 		 url('https://rpgryphus.github.io/aftermath-archives/DSBehrensschrift.woff') format('woff'),
@@ -59,7 +49,7 @@
 }
 
 @font-face {
-  font-family: 'Cyrodiil';
+  font-family: 'Insular';
   src: url('https://rpgryphus.github.io/aftermath-archives/Cyrodiil.eot') format('embedded-opentype'),
        url('https://rpgryphus.github.io/aftermath-archives/Cyrodiil.woff2') format('woff2'),
        url('https://rpgryphus.github.io/aftermath-archives/Cyrodiil.woff') format('woff'),
@@ -69,7 +59,7 @@
 }
 
 @font-face {
-  font-family: 'Cyrodiil';
+  font-family: 'Insular';
   src: url('https://rpgryphus.github.io/aftermath-archives/Cyrodiil-Bold.eot') format('embedded-opentype'),
        url('https://rpgryphus.github.io/aftermath-archives/Cyrodiil-Bold.woff2') format('woff2'),
        url('https://rpgryphus.github.io/aftermath-archives/Cyrodiil-Bold.woff') format('woff'),
@@ -79,12 +69,102 @@
 }
 
 @font-face {
-	font-family: 'Balthasar';
+	font-family: 'Manuscript';
 	src: url('https://rpgryphus.github.io/aftermath-archives/Balthazar.eot') format('embedded-opentype'),
 		 url('https://rpgryphus.github.io/aftermath-archives/Balthazar.woff2') format('woff2'),
 		 url('https://rpgryphus.github.io/aftermath-archives/Balthazar.woff') format('woff'),
 		 url('https://rpgryphus.github.io/aftermath-archives/Balthazar.ttf') format('truetype');
 	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Magiscript';
+	src: url('https://rpgryphus.github.io/aftermath-archives/ParkHaven.eot') format('embedded-opentype'),
+		 url('https://rpgryphus.github.io/aftermath-archives/ParkHaven.woff2') format('woff2'),
+		 url('https://rpgryphus.github.io/aftermath-archives/ParkHaven.woff') format('woff'),
+		 url('https://rpgryphus.github.io/aftermath-archives/ParkHaven.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Army';
+	src: url('https://rpgryphus.github.io/aftermath-archives/CoffeeSackfulStamp.eot') format('embedded-opentype'),
+		 url('https://rpgryphus.github.io/aftermath-archives/CoffeeSackfulStamp.woff2') format('woff2'),
+		 url('https://rpgryphus.github.io/aftermath-archives/CoffeeSackfulStamp.woff') format('woff'),
+		 url('https://rpgryphus.github.io/aftermath-archives/CoffeeSackfulStamp.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Fraktur';
+	src: url('https://rpgryphus.github.io/aftermath-archives/GutenbergTextura.eot') format('embedded-opentype'),
+		 url('https://rpgryphus.github.io/aftermath-archives/GutenbergTextura.woff2') format('woff2'),
+		 url('https://rpgryphus.github.io/aftermath-archives/GutenbergTextura.woff') format('woff'),
+		 url('https://rpgryphus.github.io/aftermath-archives/GutenbergTextura.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Grenze';
+	src: url('https://rpgryphus.github.io/aftermath-archives/GrenzeGotischRegular.eot') format('embedded-opentype'),
+		 url('https://rpgryphus.github.io/aftermath-archives/GrenzeGotischRegular.woff2') format('woff2'),
+		 url('https://rpgryphus.github.io/aftermath-archives/GrenzeGotischRegular.woff') format('woff'),
+		 url('https://rpgryphus.github.io/aftermath-archives/GrenzeGotischRegular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Grenze';
+	src: url('https://rpgryphus.github.io/aftermath-archives/GrenzeGotischMedium.eot') format('embedded-opentype'),
+		 url('https://rpgryphus.github.io/aftermath-archives/GrenzeGotischMedium.woff2') format('woff2'),
+		 url('https://rpgryphus.github.io/aftermath-archives/GrenzeGotischMedium.woff') format('woff'),
+		 url('https://rpgryphus.github.io/aftermath-archives/GrenzeGotischMedium.ttf') format('truetype');
+	font-weight: bold;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Grenze';
+	src: url('https://rpgryphus.github.io/aftermath-archives/GrenzeGotischBold.eot') format('embedded-opentype'),
+		 url('https://rpgryphus.github.io/aftermath-archives/GrenzeGotischBold.woff2') format('woff2'),
+		 url('https://rpgryphus.github.io/aftermath-archives/GrenzeGotischBold.woff') format('woff'),
+		 url('https://rpgryphus.github.io/aftermath-archives/GrenzeGotischBold.ttf') format('truetype');
+	font-weight: bolder;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Cinzel';
+	src: url('https://rpgryphus.github.io/aftermath-archives/CinzelRegular.eot') format('embedded-opentype'),
+		 url('https://rpgryphus.github.io/aftermath-archives/CinzelRegular.woff2') format('woff2'),
+		 url('https://rpgryphus.github.io/aftermath-archives/CinzelRegular.woff') format('woff'),
+		 url('https://rpgryphus.github.io/aftermath-archives/CinzelRegular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Cinzel';
+	src: url('https://rpgryphus.github.io/aftermath-archives/CinzelMedium.eot') format('embedded-opentype'),
+		 url('https://rpgryphus.github.io/aftermath-archives/CinzelMedium.woff2') format('woff2'),
+		 url('https://rpgryphus.github.io/aftermath-archives/CinzelMedium.woff') format('woff'),
+		 url('https://rpgryphus.github.io/aftermath-archives/CinzelMedium.ttf') format('truetype');
+	font-weight: bold;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Cinzel';
+	src: url('https://rpgryphus.github.io/aftermath-archives/CinzelBold.eot') format('embedded-opentype'),
+		 url('https://rpgryphus.github.io/aftermath-archives/CinzelBold.woff2') format('woff2'),
+		 url('https://rpgryphus.github.io/aftermath-archives/CinzelBold.woff') format('woff'),
+		 url('https://rpgryphus.github.io/aftermath-archives/CinzelBold.ttf') format('truetype');
+	font-weight: bolder;
 	font-style: normal;
 }
 
